deps/v8/test/message/fail/modules-import-redeclare2.out
*%(basename)s:8: SyntaxError: Identifier 'x' has already been declared
import {y, x, z} from "modules-import-redeclare1.js";
           ^
SyntaxError: Identifier 'x' has already been declared

